--- a/templates/emails/reservation.html.twig
+++ b/templates/emails/reservation.html.twig
@@ -31,12 +31,15 @@
     <p>
         <span>{{ 'If you have any questions, please contact us'|trans }}:</span>
         <br>
-        <span>email:</span> linas.kukulskis@gmail.com
+        <span>email:</span> bigfisheslt@gmail.com
         <br>
         <span>Tel.</span> +370 666 77777
     </p>
 
     <br><br>Laukiame atvykstant!
 
-    <br><br><b><span>www.dideleszuvys.lt</span></b>
+    <br><br><b><span>Didelės Žuvys Lt</span></b>
+    <br>
+        <span>http://bigfishes.projektai.nfqakademija.lt/</span>
+    <br>
 </div>
