--- a/templates/reservation/confirm.html.twig
+++ b/templates/reservation/confirm.html.twig
@@ -112,7 +112,7 @@
                                 {{ 'Cancel'|trans }}
                             </a>
                             <button type="submit"class="submit_button submit_button-confirm">
-                                {{ 'Confirm rezervation and make payment!'|trans }}
+                                {{ 'Confirm Reservation'|trans }}
                             </button>
                         </div>
                     </form>
