--- a/templates/reservation/new.html.twig
+++ b/templates/reservation/new.html.twig
@@ -109,7 +109,7 @@
             </div>
             <div class="row p-3">
                 <a class="left_button left_button-back" style="color: white" href="{{ path('home') }}">{{ 'Back'|trans }}</a>
-                <button class="submit_button submit_button-reservation" type="submit">{{ 'Reserve'|trans }}</button>
+                <button class="submit_button submit_button-reservation" type="submit">{{ 'Continue reservation'|trans }}</button>
             </div>
             {{ form_end(form) }}
         </div>
