--- a/templates/reservation/payment.html.twig
+++ b/templates/reservation/payment.html.twig
@@ -34,7 +34,7 @@
                       action="{{ path('home') }}">
                     <input type="hidden" name="id" value="{{ reservation.id }}">
                     <button type="submit"
-                            class="submit_button mb-2">{{ 'Complete the reservation'|trans }}
+                            class="submit_button mb-2">{{ 'Close'|trans }}
                     </button>
                 </form>
             </div>
